Fix spacing when summary long

--- a/src/app/pages/recent/recent.component.css
+++ b/src/app/pages/recent/recent.component.css
@@ -105,9 +105,9 @@ table{
 .container{
   max-width: 1550px;
 }
-
-
-
+.side-cols{
+  width:15rem;
+}
 
 
 
